# diwa

./: Cargo.toml  Dockerfile  README.md  install.sh
.github/workflows/: release.yml
docs/: architecture.md  deep-search.md  reflections.md  troubleshooting.md
skills/diwa/: SKILL.md
src/: browse.rs  claude.rs  daemon.rs  db.rs  deep_search.rs  embed.rs  extract.rs  git.rs  github.rs  install.rs  main.rs  manifest.rs  migrate.rs  reflect.rs  repo.rs  sanitize.rs  spinner.rs
tests/: integration.rs  test_git.rs  test_install.rs
