[package]
name = "diwa"
version = "0.4.0"
edition = "2021"
description = "Semantic git history index — extract the deeper meaning from your codebase"

[[bin]]
name = "diwa"
path = "src/main.rs"

[features]
default = []
load-dynamic = ["fastembed/ort-load-dynamic"]

[dependencies]
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
clap = { version = "4", features = ["derive"] }
fastembed = "5.13"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
crossterm = "0.28"
ratatui = "0.29"
serde_json = "1"
notify = "7"

[dev-dependencies]
tempfile = "3"
